# ChangeLog for gnome-base/nautilus
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/ChangeLog,v 1.247 2007/11/17 13:27:02 nixnut Exp $

  17 Nov 2007; nixnut <nixnut@gentoo.org> nautilus-2.18.3-r1.ebuild:
  Stable on ppc wrt bug 198845

  14 Nov 2007; Raúl Porcel <armin76@gentoo.org> nautilus-2.18.3-r1.ebuild:
  alpha/ia64/sparc stable wrt #198845

  13 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  nautilus-2.18.3-r1.ebuild:
  stable x86, bug 198845

  12 Nov 2007; Samuli Suominen <drac@gentoo.org> nautilus-2.18.3-r1.ebuild:
  amd64 stable wrt #198845

  06 Nov 2007; Raúl Porcel <armin76@gentoo.org> nautilus-2.18.3.ebuild:
  sparc stable wrt #193339

*nautilus-2.20.0-r1 (29 Oct 2007)

  29 Oct 2007; Daniel Gryniewicz <dang@gentoo.org>
  +files/nautilus-2.20.0-async-thumbnail-framing.patch,
  +files/nautilus-2.20.0-small-font-crasher.patch,
  +files/nautilus-2.20.0-sound-preview-cleanup.patch,
  +files/nautilus-2.20.0-thumbnail-flashing.patch,
  +nautilus-2.20.0-r1.ebuild:
  Bump to 2.20.0-r1
      * Crash with small fonts (bugs.gnome.org #454884) (thanks plaes)
      * Thumbnails not showing (bugs.gnome.org #480608) (thanks plaes)
      * Missing thumbnail frames (bugs.gnome.org #478363) (thanks plaes)
  	* Add new gstreamer/totem support for sound previews; bug #196822

  19 Oct 2007; Roy Marples <uberlord@gentoo.org>
  +files/nautilus-2.20.0-statfs.patch, nautilus-2.20.0.ebuild:
  Fix compile on FreeBSD.

*nautilus-2.20.0 (03 Oct 2007)

  03 Oct 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/nautilus-2.19.90-noesd.patch, +nautilus-2.20.0.ebuild:
  Version bump for GNOME 2.20

  27 Sep 2007; Raúl Porcel <armin76@gentoo.org> nautilus-2.18.3.ebuild:
  alpha/ia64 stable wrt #193339

*nautilus-2.18.3-r1 (25 Sep 2007)

  25 Sep 2007; Mart Raudsepp <leio@gentoo.org>
  +files/nautilus-2.18.3-gtk2.12-compatibility.patch,
  +nautilus-2.18.3-r1.ebuild: