@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/Attic/nautilus-2.18.3-r1.ebuild,v 1.5 2007/11/17 13:27:02 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/Attic/nautilus-2.18.3-r1.ebuild,v 1.6 2007/11/19 17:53:23 corsair Exp $
 
 inherit virtualx eutils gnome2
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.gnome.org/projects/nautilus/"
 
 LICENSE="GPL-2 LGPL-2 FDL-1.1"
 SLOT="0"
-KEYWORDS="alpha amd64 ~arm ~hppa ia64 ppc ~ppc64 ~sh sparc x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 ~arm ~hppa ia64 ppc ppc64 ~sh sparc x86 ~x86-fbsd"
 IUSE="beagle gnome"
 # tracker cups flac gstreamer mad ogg vorbis
 
