@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gcalctool/Attic/gcalctool-5.9.14-r1.ebuild,v 1.5 2007/11/17 13:05:10 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gcalctool/Attic/gcalctool-5.9.14-r1.ebuild,v 1.6 2007/11/19 17:51:50 corsair Exp $
 
 inherit eutils autotools gnome2
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://calctool.sourceforge.net/"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="alpha amd64 ~arm ~hppa ia64 ppc ~ppc64 ~sh sparc x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 ~arm ~hppa ia64 ppc ppc64 ~sh sparc x86 ~x86-fbsd"
 IUSE=""
 
 RDEPEND=">=x11-libs/gtk+-2.6
