@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/gcalctool
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gcalctool/ChangeLog,v 1.146 2007/11/17 13:05:10 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gcalctool/ChangeLog,v 1.147 2007/11/19 17:51:50 corsair Exp $
+
+  19 Nov 2007; Markus Rothe <corsair@gentoo.org> gcalctool-5.9.14-r1.ebuild:
+  Stable on ppc64; bug #198845
 
   17 Nov 2007; nixnut <nixnut@gentoo.org> gcalctool-5.9.14-r1.ebuild:
   Stable on ppc wrt bug 198845
