@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/nautilus
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/ChangeLog,v 1.247 2007/11/17 13:27:02 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/ChangeLog,v 1.248 2007/11/19 17:53:23 corsair Exp $
+
+  19 Nov 2007; Markus Rothe <corsair@gentoo.org> nautilus-2.18.3-r1.ebuild:
+  Stable on ppc64; bug #198845
 
   17 Nov 2007; nixnut <nixnut@gentoo.org> nautilus-2.18.3-r1.ebuild:
   Stable on ppc wrt bug 198845
